2007-07-14  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am, acinclude.m4, configure.ac: Remove ccache
	knowledge.
	* patches/icedtea-ccache.patch: Remove file.
	* Makefile.in, configure: Regenerate.

2007-07-13  Lillian Angel  <langel@redhat.com>

	* AUTHORS: Added Mark Wielaard.

2007-07-12  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* NEWS: Update for 1.1 release.

2007-07-11  Andrew Haley  <aph@redhat.com>

	* Makefile.am (patch): Set fuzziness to zero.

2007-07-11  Andrew Haley  <aph@redhat.com>

	* patches/icedtea-assembler_amd64.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Add icedtea-assembler_amd64.patch.
	(icedtea-debug): New target 

2007-07-08  Mark Wielaard  <mark@klomp.org>

	* acinclude.m4 (FIND_TOOL): New macro.
	* configure.ac: Use FIND_TOOL for essential tools, add gawk check.
	* configure: Regenerated.
	* Makefile.in: Likewise.

2007-07-08  Mark Wielaard  <mark@klomp.org>

	* acinclude.m4 (CHECK_HEADERS): Add check for alsa/asoundlib.h.
	* configure: Regenerated.

2007-07-06  Kyle Galloway <kgallowa@redhat.com>

	* patches/icedtea-buildfix.patch: Add amd64 build fix as well.

2007-07-06  Francis Kung  <fkung@redhat.com>

	* Makefile.am: Update for b15.
	* Makefile.in: Regenerated.
	* patches/icedtea-copy-plugs.patch: Update for b15.
	* patches/icedtea-debuginfo.patch: Update for b15.
	* patches/icedtea-buildfix.patch: New file.

2007-07-05  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (snapshot): New target.
	(.PHONY): Add snapshot.

2007-07-05  Lillian Angel  <langel@redhat.com>

	* .hgignore: Updated.
	* AUTHORS: Added Casey Marshall.
	* Makefile.am: Added new patch.
	* Makefile.in: Regenerated.
	* jce/javax/crypto/KeyGenerator.java: Removed unnecessary functions.
	* patches/icedtea-java.security.patch: Updated with new ssl provider.
	* patches/icedtea-ssl.patch: New patch.

2007-07-05  Lillian Angel  <langel@redhat.com>

	* jce/gnu/javax/net/ssl/AbstractSessionContext.java: Removed.