@@ -31,6 +31,7 @@ FIND_LIBGCJ_JAR
 FIND_XALAN2_JAR
 FIND_XALAN2_SERIALIZER_JAR
 FIND_XERCES2_JAR
+FIND_FREETYPE
 WITH_OPENJDK_SRC_ZIP
 WITH_OPENJDK_SRC_DIR
 ENABLE_FAST_BUILD
